tests/baselines/reference/moduleResolutionNoTsESM.errors.txt
user.ts(1,15): error TS5097: An import path can only end with a '.ts' extension when 'allowImportingTsExtensions' is enabled.
user.ts(2,15): error TS5097: An import path can only end with a '.tsx' extension when 'allowImportingTsExtensions' is enabled.
user.ts(3,15): error TS2846: A declaration file cannot be imported without 'import type'. Did you mean to import an implementation file './z.js' instead?


==== x.ts (0 errors) ====
    export default 0;
    
==== y.tsx (0 errors) ====
    export default 0;
    
==== z.d.ts (0 errors) ====
    declare const x: number;
    export default x;
    
==== user.ts (3 errors) ====
    import x from "./x.ts";
                  ~~~~~~~~
!!! error TS5097: An import path can only end with a '.ts' extension when 'allowImportingTsExtensions' is enabled.
    import y from "./y.tsx";
                  ~~~~~~~~~
!!! error TS5097: An import path can only end with a '.tsx' extension when 'allowImportingTsExtensions' is enabled.
    import z from "./z.d.ts";
                  ~~~~~~~~~~
!!! error TS2846: A declaration file cannot be imported without 'import type'. Did you mean to import an implementation file './z.js' instead?
    
    // Making sure the suggested fixes are valid:
    import x2 from "./x";
    import y2 from "./y";
    import z2 from "./z";
    